...
    },
    [navigation]
  );

  return (
    <ScrollView accessibilityLabel="app-root" style={styles.container}>
      <Collapse title="Accept a payment">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Prebuilt UI (single-step)"
              onPress={() => {
                navigation.navigate('PaymentsUICompleteScreen');
...
                navigation.navigate('WebhookPaymentScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              title="Multiline Card element only"
              onPress={() => {
                navigation.navigate('MultilineWebhookPaymentScreen');
              }}
            />
          </View>
        </>
...
              }}
            />
          </View>
        </>
      </Collapse>

      <Collapse title="Bank Debits">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="SEPA Direct Debit payment"
              onPress={() => {
                navigation.navigate('SepaPaymentScreen');
...
              }}
            />
          </View>
        </>
      </Collapse>

      <Collapse title="Bank redirects">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Bancontact Payment"
              onPress={() => {
                navigation.navigate('BancontactPaymentScreen');
              }}
            />
          </View>

          <View style={styles.buttonContainer}>
            <Button
              title="Bancontact SEPA Direct Debit set up"
              onPress={() => {
                navigation.navigate('BancontactSetupFuturePaymentScreen');
              }}
            />
          </View>

...
              }}
            />
          </View>

          <View style={styles.buttonContainer}>
            <Button
              title="iDEAL payment"
              onPress={() => {
                navigation.navigate('IdealPaymentScreen');
              }}
            />
          </View>

          <View style={styles.buttonContainer}>
            <Button
              title="iDEAL SEPA Direct Debit set up"
              onPress={() => {
                navigation.navigate('IdealSetupFuturePaymentScreen');
              }}
            />
          </View>

          <View style={styles.buttonContainer}>
            <Button
              title="Przelewy24"
              onPress={() => {
                navigation.navigate('P24PaymentScreen');
              }}
            />
          </View>

...
              }}
            />
          </View>
        </>
      </Collapse>

      <Collapse title="Buy now pay later">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Afterpay and Clearpay"
              onPress={() => {
                navigation.navigate('AfterpayClearpayPaymentScreen');
...
