appId: ${APP_ID}
---
- launchApp:
    clearState: true
- tapOn: "Bank redirects"
- tapOn: "EPS"
- assertVisible:
    text: "E-mail"
- tapOn:
    text: "E-mail"
- inputText: "test@stripe.com"
- tapOn:
    text: "Pay"
    retryTapIfNoChange: false
- assertVisible:
    text: "FAIL TEST PAYMENT"
- tapOn: "FAIL TEST PAYMENT"
- assertVisible:
    text: .*Failed.*
- tapOn: "OK"
