appId: ${APP_ID}
---
- launchApp:
    clearState: true
- tapOn: "Bank redirects"
- scrollUntilVisible:
    element:
      text: "iDEAL payment"
    direction: DOWN
- tapOn: "iDEAL payment"
- assertVisible:
    text: "E-mail"
- tapOn:
    text: "E-mail"
- inputText: "test@stripe.com"
- tapOn:
    text: "Pay"
    retryTapIfNoChange: false
- assertVisible:
    text: "AUTHORIZE TEST PAYMENT"
- tapOn: "AUTHORIZE TEST PAYMENT"
- assertVisible:
    text: "Success"
- tapOn: "OK"
