appId: ${APP_ID}
---
- launchApp
- tapOn: "Accept a payment"
- scrollUntilVisible:
    element:
      text: "Multiline Card element only"
    direction: DOWN
- tapOn: "Multiline Card element only"
- assertVisible:
    text: "E-mail"
- inputText: "4242424242424242"
- inputText: "0145"
- inputText: "123"
- inputText: "12345"
- tapOn:
    text: "E-mail"
- inputText: "test@stripe.com"
- pressKey: Enter
- tapOn:
    text: "Pay"
    retryTapIfNoChange: false
- assertVisible:
    text: "Success"
- tapOn: "OK"
